# project_verse

./: .env  .gitignore  Cargo.toml
.sqlx/: query-11770ba9cb308e85007d7c90528c99d0721fa4629a26fb8f880bfda0477bb37e.json  query-175f56b6dd5a58a63965216ea407ac2049a666975b316389ac446bb1c82a2905.json  query-1c2201b0ca9305283634fe5c72df6eac3ad954c1238088a84a4b9085b1dbdb74.json  query-1ca4e70a988c49c8e0bcf2820dea550d9854e4b2404d073f2c9bfd4dfc388b2a.json  query-2df0900449cb53dd549170ac489859c70071c92271de933b65d6efb8228d6084.json  query-38dc99242a45bf338a481b50542962b848fbcaf230dc1c20c2e3e7a2f0e9e1dc.json  query-3ba86b8192061bca3bfd42d5785c3f2011173b668e50b7782b9b2bf8b071733d.json  query-4cd844d89e8824a0fe8f1b48815460921f94b9f6416dee2782b5ff79d3dadb5a.json  query-55196d9dac8a3796783451bb72cd455506b682d715e41f157eb2cc7aeddde576.json  query-58c1ee319251e7bf5a5a677297c428761911801271ecf82b98f7bc6e1d78d4ff.json  query-5d20673bb7a3173498264af24650465888d426f9d301b0cba4fdcaa04070e3c4.json  query-5e39e1fa135aee4f9bc919b8f5f808567d7bde41b8b253626f990502a4819695.json  query-67c9a9d1301f370ee09eec149e8b41198727101b447cefaa74305c7e7e274eed.json  query-6c7368f3f49c96e0d6f5303fa6fe55adfd8f51e41a30ba5dcb5b1a6f4f3c122b.json  query-6d574c3f9324ea9bc75eaa2ccf667e1012a7839b72a6ad533f5a91c2712aa264.json  query-6e9df9d56d543e64025af8a368103ad07a3039b003fa893d958830febe3ffbad.json  query-7021629382b89f77fb53b6e0ea323f826cabd0c9e38d30a5b68f4bc4e481d68e.json  query-77b336b4c1f890b4b5f9cc1fbb00c0b65cc6cf0596585276ef6959af1373c3b3.json  query-786e79e3cb517a04a743aecf37582ee6c076b8823d286eeb7ed94fe02c22b85f.json  query-7a6a7c98990fe563a7515613ddcb149e5de6aa9110d17af6d6c92c7d57498cc0.json  query-8f705f58d97e1889e4e25d30e6f795688446979babf0a008dde2d4d7664c43ef.json  query-9360b0fef04de0f7259642e08572ef9d998fadb54cee3fffaa1107a7c3ee711d.json  query-94453c5433d29ae604cf9d12dd12bab538e6f8c1c9cbcc571a4d4f5816c47a15.json  query-954baaa95acdcaf3d672dcb5149085177c622dcc3c7ef5a0f5314113e1af54dd.json  query-98e6a00602b6746aade8ae1a3910bc20f7475d91ecad6290af94455889a7af7d.json  query-9a94af079b699b1aeba43b65a25a0d2de9400395d7056058cf775a50c1c523f6.json  query-9b84c91de0341a817b2db0334fa4c5d763bb29a89960e90603ff417c1c084e8c.json  query-a0633b3959aa83a1d26d1c872c28a67539c3533709dd172feaf2d00ea7f9a42d.json  query-a2534dde2ffe2f8f96da46a5d0f7e29cc0c8676750c80e27c3e832777386d39b.json  query-a362d56adf397db6de41887ac9474a3a2bbf137fbd48e6d0084bb1f78134c785.json  query-a7a3844f9d972e3d85b08660f14e5e6c291124b706975c4a5cbba864af9d4905.json  query-b0c07f2e552d883e4e37dd759d3165ddc11740761c728b69bc0d0d007a2179ec.json  query-b2f9f650c4c3c63db75f40fecf87178210119379926f9a4cd39bca5f691d7486.json  query-b62f49460af1ba99bdd364d0badb53f9c753eeaf514c098fcb541b2d73f0fc42.json  query-b84bf653ca7f0050cd82fc9cc4853681a5a37c1af40f31cd1495e63c87e4e732.json  query-b8abda726031e8411e19e81735d7de1cdd4af9dff66012ce3096fc7d4ac72203.json  query-cab4b0339bce3ecb0e9da45786db6d2f8462ca7edee447937e9295ac85cfa9bb.json  query-d0d5f3e5881d4db01e2af87ac6d8fc40f5819d0ff35b7461aa042c144203db96.json  query-d15600d07c8abd03ddb75d2be1b1f1bf18aed0e89f31cea2158fa416a4e631a7.json  query-d89575c386f3f024d38e944a9efb4f8743a7dbd56354577e9fc22df6e4704853.json  (+7 more)
(+47 files in other folders)
