[package]
name = "project_verse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
bcrypt = "0.15.0"
bigdecimal = "0.4.1"
chrono = { version = "0.4.30", features = ["serde"] }
diesel = "2.1.1"
dotenv = "0.15.0"
hex = "0.4.3"
jsonwebtoken = "8.3.0"
jwt = "0.16.0"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "bigdecimal"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }



[[bin]]
name = "project_verse"  
path = "src/main.rs"
