[package]
name = "fat_fat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
bcrypt = "0.15.0"
bigdecimal =  { version = "0.3.0", features = ["serde"] } 
chrono = { version = "0.4.30", features = ["serde"] }
diesel = { version = "2.1.5", features = ["postgres", "32-column-tables", "numeric"] }
dotenv = "0.15.0"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
jwt = "0.16.0"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "bigdecimal"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
lettre = "0.11.6"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde_with = "3.7.0"
qrcode = "0.14.0"
image = "0.25.0"
base64 = "0.22.0"
tokio-util = "0.7.10"
colored = "2.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1.1"
dotenvy = "0.15.7"
# std-semaphore = "0.1.0"



[[bin]]
name = "fat_fat"  
path = "src/main.rs"
